[package]
name = "scrutch"
version = "0.0.6"
authors = ["Marcello Seri <marcello.seri@gmail.com>"]
description = "Tiny utility to search rust crates directly from the command line"
documentation = "https://github.com/mseri/scrutch"
homepage = "https://github.com/mseri/scrutch"
repository = "https://github.com/mseri/scrutch"
readme = "README.md"
keywords = ["search", "crates"]
license = "MIT"

[dependencies]
docopt          = "0.8.3"
reqwest         = "0.8.5"
serde           = "1.0.37"
serde_derive    = "1.0.37"
serde_json      = "1.0.13"
term            = "0.5.1"
pad             = "0.1.5"
