[package]
name = "cargo-ssearch"
version = "0.1.3"
authors = ["Marcello Seri <marcello.seri@gmail.com>"]
description = "cargo-ssearch: cargo search on steroids"
documentation = "https://github.com/mseri/scrutch"
homepage = "https://github.com/mseri/scrutch"
repository = "https://github.com/mseri/scrutch"
readme = "README.md"
keywords = ["search", "cargo", "subcommand", "cli", "cargo-subcommand"]
license = "MIT"

[dependencies]
pad             = "0.1.5"
quicli          = "0.2.0"
reqwest         = "0.9.2"
serde           = "1.0.37"
serde_derive    = "1.0.37"
serde_json      = "1.0.13"
term            = "0.5.1"
